# eva

./: .gitignore  AUTHENTICATION_MIGRATION.md  AUTO_NAME_EXTRACTION.md  CONVERSATION_HISTORY_IMPLEMENTATION.md  LANGSMITH_DEPLOY.md  README.md  SETUP.md  USER_NAME_IMPLEMENTATION.md  env.example  install.sh  langgraph.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_new_architecture.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
eva_assistant/: __init__.py  config.py
eva_assistant/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
eva_assistant/app/: __init__.py  main.py  schemas.py
eva_assistant/auth/: __init__.py  eva_auth.py  oauth_manager.py  user_auth.py
eva_assistant/memory/: __init__.py  conversation.py
eva_assistant/tools/: __init__.py  base.py  calendar.py  email.py  mcp_http.py
scripts/: __init__.py  debug_auth.py  demo_timezone_system.py  manage_user_timezone.py  migrate_tokens.py  reauthorize_eva.py  setup_oauth.py  test_auto_name_extraction.py  test_availability.py  test_calendar_logging.py  test_conversation_history.py  test_email_calendar_system.py  test_eva_draft.py  test_langsmith.py  test_name_api.py  test_timezone_calendar_integration.py  test_user_names.py  test_working_hours_system.py
